third_party/move/move-compiler-v2/tests/op-equal/error_not_shown.exp

Diagnostics:
error: cannot mutably borrow from an immutable ref
  ┌─ tests/op-equal/error_not_shown.move:9:17
  │
9 │         let p = &mut self.0;
  │                 ^^^^^^^^^^^
